fix: Resolve issue with dropdown on small screens
This commit fixes an issue with the dropdown component on small screens, making its width more appropriate for this type of screens.

--- a/src/styles/main.css
+++ b/src/styles/main.css
@@ -144,6 +144,12 @@ input:focus {
 
 .unit-label {
   cursor: pointer;
+  justify-content: center;
+}
+
+.dropdown-container {
+  position: relative;
+  width: 90vw;
 }
 
 .dropdown {
@@ -214,5 +220,13 @@ input:focus {
   
   .conversion-icons {
     margin-top: 5px;
+  }
+
+  .dropdown-container {
+    width: 100%;
+  }
+
+  .unit-label {
+    justify-content: space-between;
   }
 }
